# rta-with-flink-pinot

./: .cascade  .gitignore  Makefile  README.adoc  docker-compose.yaml
.github/workflows/: ci.yml
.junie/: guidelines.md
dashboard/: .dockerignore  Dockerfile  Makefile  pyproject.toml
dashboard/src/analytics_dashboard/: app.py
flink/: Dockerfile  log4j-console.properties
flink/sql/: flink.sql
generator/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  wait-for-kafka.sh
generator/src/analytics_generator/: generator.py  models.py
make/: common.mk
pinot/: init-pinot-local.sh  init-pinot.sh
pinot/config/: broker.conf  controller.conf  server.conf
pinot/config/schemas/: active_users.json  product_analytics.json  user_sessions.json
pinot/config/tables/: active_users.json  active_users_schema.json  product_analytics.json  product_analytics_schema.json  user_sessions.json  user_sessions_schema.json
